--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1017,139 +1017,6 @@ template {
   height: 700px;
   position: relative; }
 
-.about .slides li {
-  height: 403px; }
-
-.about {
-  margin: 0 auto;
-  width: 988px; }
-  .about .about-left {
-    margin-right: 45px;
-    width: 500px; }
-  .about .about-left, .about .about-right {
-    float: left; }
-  .about .about-right {
-    width: 440px; }
-    .about .about-right .btn {
-      width: 100%;
-      line-height: 65px; }
-    .about .about-right p {
-      color: #4d4d4d; }
-  .about .about-right-title {
-    padding: 18px 15px;
-    border-top: 1px solid #b3b3b3;
-    border-bottom: 1px solid #b3b3b3; }
-    .about .about-right-title .iconfont {
-      margin-right: 21px;
-      font-size: 65px;
-      color: #cc2427;
-      vertical-align: middle; }
-    .about .about-right-title .title {
-      font-size: 26px;
-      vertical-align: middle; }
-
-.category {
-  padding-top: 65px;
-  padding-bottom: 160px; }
-  .category:nth-of-type(2n) {
-    background-color: #f4f7fa; }
-  .category .category-hd {
-    position: relative;
-    margin-bottom: 80px;
-    text-align: center; }
-    .category .category-hd .secondary:after {
-      position: absolute;
-      bottom: -19px;
-      left: 50%;
-      transform: translateX(-50%);
-      content: '';
-      display: block;
-      width: 80px;
-      height: 2px;
-      background-color: #f23d46; }
-  .category .category-bd:before, .category .category-bd:after {
-    content: " ";
-    display: table; }
-  .category .category-bd:after {
-    clear: both; }
-  .category .category-bd .service {
-    padding-bottom: 41px;
-    text-align: center;
-    transition: background-color .5s ease; }
-    .category .category-bd .service .icon {
-      margin: 40px auto;
-      width: 80px;
-      height: 80px;
-      padding-top: 25px;
-      background: url(../img/aperture.png) no-repeat center center; }
-      .category .category-bd .service .icon span {
-        font-size: 30px; }
-    .category .category-bd .service .desc > h4 {
-      margin-bottom: 19px; }
-    .category .category-bd .service .desc > p {
-      color: #999; }
-    .category .category-bd .service:hover {
-      background-color: #f3474b;
-      color: #fff;
-      border-radius: 6px; }
-      .category .category-bd .service:hover .desc > p {
-        color: #fff; }
-  .category .category-ft {
-    margin-top: 80px; }
-    .category .category-ft .category-action {
-      margin: 0 auto;
-      display: block; }
-
-.story a {
-  position: relative;
-  display: block;
-  transition: transform .5s ease-in-out; }
-  .story a img {
-    display: block;
-    max-width: 100%;
-    height: auto; }
-  .story a .story-overlay {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    opacity: 0;
-    text-align: center;
-    color: #fff;
-    background-color: rgba(211, 33, 42, 0.7);
-    transition: opacity .5s ease-out; }
-    .story a .story-overlay h1 {
-      margin-top: 81.5px;
-      margin-bottom: 32px;
-      transform: translate3d(0, 40px, 0);
-      transition: transform .5s ease-in-out; }
-    .story a .story-overlay p {
-      position: relative;
-      margin: 0 auto;
-      width: 217px;
-      letter-spacing: 2.1px;
-      transform: translate3d(0, 40px, 0);
-      transition: transform .5s ease-in-out; }
-      .story a .story-overlay p:after {
-        position: absolute;
-        left: 50%;
-        bottom: -17px;
-        content: '';
-        display: block;
-        height: 3px;
-        width: 43px;
-        background-color: #fff;
-        transform: translate3d(-50%, 0, 0); }
-  .story a:hover, .story .nav-tabs > li.active > a {
-    transform: scale(1.18); }
-    .story a:hover .story-overlay, .story .nav-tabs > li.active > a .story-overlay {
-      opacity: 1; }
-    .story a:hover h1, .story .nav-tabs > li.active > a h1 {
-      transform: translate3d(0, 0, 0); }
-    .story a:hover p, .story .nav-tabs > li.active > a p {
-      transform: translate3d(0, 0, 0); }
-
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   font-weight: 400;
@@ -1235,5 +1102,158 @@ p {
       color: #f23d46;
       font-size: 16px;
       letter-spacing: 1.6px; }
+
+.about .slides li {
+  height: 403px; }
+
+.about {
+  margin: 0 auto;
+  width: 988px; }
+  .about .about-left {
+    margin-right: 45px;
+    width: 500px; }
+  .about .about-left, .about .about-right {
+    float: left; }
+  .about .about-right {
+    width: 440px; }
+    .about .about-right .btn {
+      width: 100%;
+      line-height: 65px; }
+    .about .about-right p {
+      color: #4d4d4d; }
+  .about .about-right-title {
+    padding: 18px 15px;
+    border-top: 1px solid #b3b3b3;
+    border-bottom: 1px solid #b3b3b3; }
+    .about .about-right-title .iconfont {
+      margin-right: 21px;
+      font-size: 65px;
+      color: #cc2427;
+      vertical-align: middle; }
+    .about .about-right-title .title {
+      font-size: 26px;
+      vertical-align: middle; }
+
+.category {
+  padding-top: 65px;
+  padding-bottom: 160px; }
+  .category:nth-of-type(2n) {
+    background-color: #f4f7fa; }
+  .category .category-hd {
+    position: relative;
+    margin-bottom: 80px;
+    text-align: center; }
+  .category .secondary:after {
+    position: absolute;
+    bottom: -19px;
+    left: 50%;
+    transform: translateX(-50%);
+    content: '';
+    display: block;
+    width: 80px;
+    height: 2px;
+    background-color: #f23d46; }
+  .category .category-bd:before, .category .category-bd:after {
+    content: " ";
+    display: table; }
+  .category .category-bd:after {
+    clear: both; }
+  .category .category-bd .service {
+    padding-bottom: 41px;
+    text-align: center;
+    transition: background-color .5s ease; }
+    .category .category-bd .service .icon {
+      margin: 40px auto;
+      width: 80px;
+      height: 80px;
+      padding-top: 25px;
+      background: url(../img/aperture.png) no-repeat center center; }
+      .category .category-bd .service .icon span {
+        font-size: 30px; }
+    .category .category-bd .service .desc > h4 {
+      margin-bottom: 19px; }
+    .category .category-bd .service .desc > p {
+      color: #999; }
+    .category .category-bd .service:hover {
+      background-color: #f3474b;
+      color: #fff;
+      border-radius: 6px; }
+      .category .category-bd .service:hover .desc > p {
+        color: #fff; }
+  .category .category-ft {
+    margin-top: 80px; }
+    .category .category-ft .category-action {
+      margin: 0 auto;
+      display: block; }
+
+.story a {
+  position: relative;
+  display: block;
+  transition: transform .5s ease-in-out; }
+  .story a img {
+    display: block;
+    max-width: 100%;
+    height: auto; }
+  .story a .story-overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    text-align: center;
+    color: #fff;
+    background-color: rgba(211, 33, 42, 0.7);
+    transition: opacity .5s ease-out; }
+    .story a .story-overlay h1 {
+      margin-top: 81.5px;
+      margin-bottom: 32px;
+      transform: translate3d(0, 40px, 0);
+      transition: transform .5s ease-in-out; }
+    .story a .story-overlay p {
+      position: relative;
+      margin: 0 auto;
+      width: 217px;
+      letter-spacing: 2.1px;
+      transform: translate3d(0, 40px, 0);
+      transition: transform .5s ease-in-out; }
+      .story a .story-overlay p:after {
+        position: absolute;
+        left: 50%;
+        bottom: -17px;
+        content: '';
+        display: block;
+        height: 3px;
+        width: 43px;
+        background-color: #fff;
+        transform: translate3d(-50%, 0, 0); }
+  .story a:hover, .story .nav-tabs > li.active > a {
+    transform: scale(1.18); }
+    .story a:hover .story-overlay, .story .nav-tabs > li.active > a .story-overlay {
+      opacity: 1; }
+    .story a:hover h1, .story .nav-tabs > li.active > a h1 {
+      transform: translate3d(0, 0, 0); }
+    .story a:hover p, .story .nav-tabs > li.active > a p {
+      transform: translate3d(0, 0, 0); }
+
+.custom {
+  padding-top: 160px;
+  background: url(../img/custom-bg.png) no-repeat center center;
+  background-color: #fff; }
+  .custom .custom-left {
+    padding: 80px 0 40px;
+    text-align: center;
+    color: #fff;
+    background-color: #f23d46; }
+    .custom .custom-left > .secondary {
+      color: #fffefe;
+      position: relative; }
+      .custom .custom-left > .secondary:after {
+        background-color: #fff; }
+    .custom .custom-left > .custom-desc {
+      margin: 40px 0 48px; }
+      .custom .custom-left > .custom-desc > p {
+        margin: 0;
+        line-height: 25px; }
 
 /*# sourceMappingURL=main.css.map */
